--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -103,15 +103,12 @@ dist.jar=${dist.dir}/Commons.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.jayatana-1.2.4.jar=lib/jayatana-1.2.4.jar
-file.reference.xfiledialog.jar=lib/xfiledialog.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.jayatana-1.2.4.jar}:\
-    ${file.reference.xfiledialog.jar}
+    ${reference.Xplaf.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-source 1.5 -target 1.5 -Xlint:unchecked
 javac.deprecation=true
@@ -149,6 +146,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
+project.Xplaf=../../../NetBeansProjects/xplaf
+reference.Xplaf.jar=${project.Xplaf}/dist/Xplaf.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
