Circular dependency fix

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -107,8 +107,7 @@ includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
-javac.classpath=\
-    ${reference.Xplaf.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=-source 1.5 -target 1.5 -Xlint:unchecked
 javac.deprecation=true
@@ -146,8 +145,6 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
-project.Xplaf=../../../NetBeansProjects/xplaf
-reference.Xplaf.jar=${project.Xplaf}/dist/Xplaf.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
