--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: java
 before_install:
-  - wget -P ~/.m2 https://raw.githubusercontent.com/TimePath/superpom/master/settings.xml
+  - wget -NP ~/.m2 https://raw.githubusercontent.com/TimePath/superpom/master/settings.xml
