--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 apply from: 'https://raw.githubusercontent.com/SourceUtils/super/3f21198/common.gradle'
 
 buildscript {
-    ext.kotlin_version = '0.14.451'
+    ext.kotlin_version = '1.0.0-beta-2422'
     repositories {
         mavenCentral()
         maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
